--- a/main.latex
+++ b/main.latex
@@ -1,4 +1,4 @@
-\documentclass{beamer}
+\documentclass[handout]{beamer}
 % Compile with [handout] to produce friendly print and shareable format.
 
 \usepackage[utf8]{inputenc}
